# oxide-store

./: Cargo.toml
src/: main.rs
src/routes/: base_routes.rs  mod.rs
