[package]
name = "oxide-store"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
dotenv = "0.15"
env_logger = "0.11.7"
derive_more = "2.0.1"
log = "0.4"